--- a/src/main/resources/fxmls/Idol/ListOfBookedFansCard.fxml
+++ b/src/main/resources/fxmls/Idol/ListOfBookedFansCard.fxml
@@ -8,12 +8,12 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<HBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="120.0" prefWidth="580.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
+<HBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="120.0" prefWidth="580.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="idol.view.ListOfBookedFansCardView">
     <padding>
         <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
     </padding>
     <children>
-        <ImageView fitHeight="103.0" fitWidth="125.0" pickOnBounds="true" preserveRatio="true">
+        <ImageView fx:id="imageView" fitHeight="103.0" fitWidth="125.0" pickOnBounds="true" preserveRatio="true">
             <HBox.margin>
                 <Insets right="10.0" />
             </HBox.margin>
@@ -21,32 +21,52 @@
                 <Image url="@../../idol/images/profile-user.png" />
             </image>
         </ImageView>
-      <Pane prefHeight="130.0" prefWidth="459.0" style="-fx-background-color: #f0f3f7;">
-         <children>
-                <Label layoutX="6.0" layoutY="14.0" prefHeight="35.0" prefWidth="166.0" text="Fan Name" wrapText="true">
+        <Pane prefHeight="130.0" prefWidth="459.0" style="-fx-background-color: #f0f3f7;">
+            <children>
+                <Label fx:id="fanNameLabel" layoutX="6.0" layoutY="14.0" prefHeight="35.0" prefWidth="204.0" text="Fan Name" wrapText="true">
                     <font>
-                        <Font name="Arial" size="24.0" />
+                        <Font name="Arial" size="20.0" />
                     </font>
                 </Label>
-            <Label layoutX="6.0" layoutY="57.0" prefHeight="35.0" prefWidth="195.0" text="Fan User Name" wrapText="true">
-               <font>
-                  <Font name="Arial" size="24.0" />
-               </font>
-            </Label>
-            <Label layoutX="225.0" layoutY="14.0" prefHeight="35.0" prefWidth="166.0" text="Fan Email" wrapText="true">
-               <font>
-                  <Font name="Arial" size="18.0" />
-               </font>
-            </Label>
-            <Label layoutX="225.0" layoutY="57.0" prefHeight="35.0" prefWidth="166.0" text="Time Booked Here" wrapText="true">
-               <font>
-                  <Font name="Arial" size="18.0" />
-               </font>
-            </Label>
-         </children>
-         <padding>
-            <Insets left="5.0" />
-         </padding>
-      </Pane>
+                <Label fx:id="fanUsernameLabel" layoutX="6.0" layoutY="57.0" prefHeight="35.0" prefWidth="207.0" text="Fan User Name" wrapText="true">
+                    <font>
+                        <Font name="Arial" size="20.0" />
+                    </font>
+                </Label>
+                <Label fx:id="fanEmailLabel" layoutX="225.0" layoutY="14.0" prefHeight="35.0" prefWidth="208.0" text="Fan Email" wrapText="true">
+                    <font>
+                        <Font name="Arial" size="16.0" />
+                    </font>
+                </Label>
+                <Label fx:id="timestampLabel" layoutX="225.0" layoutY="57.0" prefHeight="35.0" prefWidth="214.0" text="Timestamp here" wrapText="true">
+                    <font>
+                        <Font name="Arial" size="16.0" />
+                    </font>
+                </Label>
+                <Label layoutX="224.0" layoutY="5.0" prefHeight="8.0" prefWidth="204.0" text="email:" wrapText="true">
+                    <font>
+                        <Font name="Arial" size="12.0" />
+                    </font>
+                </Label>
+                <Label layoutX="224.0" layoutY="47.0" prefHeight="8.0" prefWidth="204.0" text="booked date:" wrapText="true">
+                    <font>
+                        <Font name="Arial" size="12.0" />
+                    </font>
+                </Label>
+                <Label layoutX="8.0" layoutY="4.0" prefHeight="8.0" prefWidth="204.0" text="name:" wrapText="true">
+                    <font>
+                        <Font name="Arial" size="12.0" />
+                    </font>
+                </Label>
+                <Label layoutX="8.0" layoutY="46.0" prefHeight="8.0" prefWidth="204.0" text="username:" wrapText="true">
+                    <font>
+                        <Font name="Arial" size="12.0" />
+                    </font>
+                </Label>
+            </children>
+            <padding>
+                <Insets left="5.0" />
+            </padding>
+        </Pane>
     </children>
 </HBox>
