--- a/src/main/resources/fxmls/Idol/ListOfBookedFansPopupView.fxml
+++ b/src/main/resources/fxmls/Idol/ListOfBookedFansPopupView.fxml
@@ -1,90 +1,25 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ScrollPane?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.FlowPane?>
 <?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
+<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="idol.view.ListOfBookedFansPopupViewView">
     <children>
         <HBox prefHeight="51.0" prefWidth="600.0" style="-fx-background-color: #1b4994;">
             <children>
-                <Label alignment="CENTER" prefHeight="51.0" prefWidth="378.0" text="List of Booked Fans For February 24, 2024" textFill="WHITE">
+                <Label fx:id="dateLabel" alignment="CENTER" prefHeight="51.0" prefWidth="378.0" text="List of Booked Fans For February 24, 2024" textFill="WHITE">
                     <font>
                         <Font name="Arial Black" size="14.0" />
                     </font>
                 </Label>
-                <Pane prefHeight="51.0" prefWidth="221.0">
-                    <children>
-                  <Button layoutX="152.0" layoutY="1.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="26.0" style="-fx-background-color: transparent;">
-                     <graphic>
-                              <ImageView fitHeight="40.0" fitWidth="49.0" pickOnBounds="true" preserveRatio="true">
-                                  <image>
-                                      <Image url="@../../idol/images/exit-bitton.png" />
-                                  </image>
-                              </ImageView>
-                     </graphic>
-                  </Button>
-                    </children>
-                    <padding>
-                        <Insets bottom="20.0" top="20.0" />
-                    </padding>
-                </Pane>
             </children></HBox>
-        <ScrollPane hbarPolicy="NEVER" prefHeight="349.0" prefWidth="600.0">
+        <ScrollPane fx:id="scrollPane" hbarPolicy="NEVER" prefHeight="349.0" prefWidth="600.0">
             <content>
-                <FlowPane prefHeight="350.0" prefWidth="598.0">
-               <children>
-                  <HBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="120.0" prefWidth="580.0" style="-fx-background-color: white;">
-                     <padding>
-                        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-                     </padding>
-                     <children>
-                        <ImageView fitHeight="103.0" fitWidth="125.0" pickOnBounds="true" preserveRatio="true">
-                           <HBox.margin>
-                              <Insets right="10.0" />
-                           </HBox.margin>
-                           <image>
-                              <Image url="@../../idol/images/profile-user.png" />
-                           </image>
-                        </ImageView>
-                        <Pane prefHeight="130.0" prefWidth="459.0" style="-fx-background-color: #f0f3f7;">
-                           <children>
-                              <Label layoutX="6.0" layoutY="14.0" prefHeight="35.0" prefWidth="166.0" text="Fan Name" wrapText="true">
-                                 <font>
-                                    <Font name="Arial" size="24.0" />
-                                 </font>
-                              </Label>
-                              <Label layoutX="6.0" layoutY="57.0" prefHeight="35.0" prefWidth="195.0" text="Fan User Name" wrapText="true">
-                                 <font>
-                                    <Font name="Arial" size="24.0" />
-                                 </font>
-                              </Label>
-                              <Label layoutX="225.0" layoutY="14.0" prefHeight="35.0" prefWidth="166.0" text="Fan Email" wrapText="true">
-                                 <font>
-                                    <Font name="Arial" size="18.0" />
-                                 </font>
-                              </Label>
-                              <Label layoutX="225.0" layoutY="57.0" prefHeight="35.0" prefWidth="166.0" text="Time Booked Here" wrapText="true">
-                                 <font>
-                                    <Font name="Arial" size="18.0" />
-                                 </font>
-                              </Label>
-                           </children>
-                           <padding>
-                              <Insets left="5.0" />
-                           </padding>
-                        </Pane>
-                     </children>
-                  </HBox>
-               </children></FlowPane>
+                <FlowPane fx:id="flowPane" prefHeight="350.0" prefWidth="598.0" />
             </content>
         </ScrollPane>
     </children>
