--- a/src/main/resources/fxmls/fan/BookingFanmeets.fxml
+++ b/src/main/resources/fxmls/fan/BookingFanmeets.fxml
@@ -1,23 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.Pane?>
-<?import javafx.scene.layout.VBox?>
-<?import javafx.scene.shape.Rectangle?>
-<?import javafx.scene.text.Font?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.shape.*?>
+<?import javafx.scene.text.*?>
 
-<VBox alignment="TOP_CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="510.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="idol.controller.BookingFanmeets">
+<VBox alignment="TOP_CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="510.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fan.view.popup.BookingFanMeetsView">
    <children>
       <Pane>
          <children>
             <Pane prefHeight="55.0" prefWidth="800.0" style="-fx-background-color: #1b4994;">
                <children>
-                  <Label alignment="TOP_LEFT" layoutX="19.0" layoutY="13.0" prefHeight="38.0" prefWidth="446.0" text="IdolName's Fan Meet" textFill="WHITE">
+                  <Label fx:id="headingLB" alignment="TOP_LEFT" layoutX="19.0" layoutY="13.0" prefHeight="38.0" prefWidth="446.0" text="IdolName's Fan Meet" textFill="WHITE">
                      <font>
                         <Font name="Arial Black" size="19.0" />
                      </font>
@@ -31,7 +27,7 @@
             <Pane prefHeight="316.0" prefWidth="282.0">
                <children>
                   <Rectangle arcHeight="5.0" arcWidth="5.0" fill="LIGHTGRAY" height="254.0" layoutX="16.0" layoutY="31.0" stroke="TRANSPARENT" strokeType="INSIDE" style="-fx-arc-height: 30; -fx-arc-width: 30;" width="250.0" />
-                  <ImageView fitHeight="185.0" fitWidth="179.0" layoutX="53.0" layoutY="69.0" pickOnBounds="true" preserveRatio="true">
+                  <ImageView fx:id="profilePicture" fitHeight="185.0" fitWidth="179.0" layoutX="53.0" layoutY="69.0" pickOnBounds="true" preserveRatio="true">
                      <image>
                         <Image url="@../../fan/images/profile-user.png" />
                      </image>
@@ -66,23 +62,23 @@
                   </Label>
                </children>
             </VBox>
-            <VBox alignment="CENTER_LEFT" prefHeight="316.0" prefWidth="186.0" spacing="40.0">
+            <VBox alignment="CENTER_LEFT" prefHeight="316.0" prefWidth="186.0" spacing="36.0">
                <children>
-                  <Label text="4:10 PM">
+                  <TextField fx:id="timeTF" layoutX="30.0" layoutY="150.0" promptText="Enter TIme">
                      <font>
-                        <Font name="Arial" size="25.0" />
+                        <Font name="Arial" size="18.0" />
+                     </font>
+                  </TextField>
+                  <Label fx:id="dateLB" text="4/6/2024">
+                     <font>
+                        <Font size="23.0" />
                      </font>
                   </Label>
-                  <Label text="4/3/2024">
+                  <TextField fx:id="durationTF" promptText="Enter Duration">
                      <font>
-                        <Font name="Arial" size="25.0" />
+                        <Font name="Arial" size="18.0" />
                      </font>
-                  </Label>
-                  <Label text="20 Minutes">
-                     <font>
-                        <Font name="Arial" size="25.0" />
-                     </font>
-                  </Label>
+                  </TextField>
                </children>
                <padding>
                   <Insets left="20.0" />
@@ -97,7 +93,7 @@
                   <Font name="Arial" size="24.0" />
                </font>
             </Label>
-            <Label alignment="CENTER" layoutX="368.0" layoutY="22.0" prefHeight="27.0" prefWidth="83.0" text="P5000" textFill="#1b4994">
+            <Label fx:id="priceLB" alignment="CENTER" layoutX="368.0" layoutY="22.0" prefHeight="27.0" prefWidth="83.0" text="P5000" textFill="#1b4994">
                <font>
                   <Font name="Arial Bold" size="24.0" />
                </font>
@@ -107,7 +103,7 @@
             </Label>
          </children>
       </HBox>
-      <Button fx:id="FanMeetDetailsBackButton" layoutX="58.0" layoutY="371.0" mnemonicParsing="false" prefHeight="52.0" prefWidth="225.0" style="-fx-border-color: #1b4994; -fx-background-color: #f0f3f7; -fx-background-radius: 5; -fx-border-radius: 5;" text="Confirm">
+      <Button fx:id="confirmBT" layoutX="58.0" layoutY="371.0" mnemonicParsing="false" prefHeight="52.0" prefWidth="225.0" style="-fx-border-color: #1b4994; -fx-background-color: #f0f3f7; -fx-background-radius: 5; -fx-border-radius: 5;" text="Confirm">
          <font>
             <Font size="18.0" />
          </font>
