--- a/src/main/resources/fxmls/Idol/CreateNewFanMeetView.fxml
+++ b/src/main/resources/fxmls/Idol/CreateNewFanMeetView.fxml
@@ -39,6 +39,7 @@
                             </VBox.margin>
                         </Label>
                   <DatePicker prefHeight="58.0" prefWidth="298.0" style="-fx-background-color: #f0f3f7; -fx-border-color: #1b4994;" />
+                  <TextField text="DITO YUNG ENTRY NG CREATE FANMEET" />
                     </children>
                <padding>
                   <Insets left="40.0" right="20.0" />
@@ -56,7 +57,7 @@
                                  </font>
                               </Label>
                               <TextField promptText="eg. 13:00" />
-                              <Label layoutX="30.0" layoutY="10.0" prefHeight="39.0" prefWidth="130.0" text="Enter Start Time" textFill="WHITE">
+                              <Label layoutX="30.0" layoutY="10.0" prefHeight="39.0" prefWidth="130.0" text="Enter End Time" textFill="WHITE">
                                  <font>
                                     <Font name="Arial Black" size="12.0" />
                                  </font>
@@ -83,7 +84,7 @@
             </children></HBox>
 
 
-        <Button fx:id="FanMeetDetailsBackButton" layoutX="58.0" layoutY="371.0" mnemonicParsing="false" prefHeight="52.0" prefWidth="225.0" style="-fx-border-color: #1b4994; -fx-background-color: #f0f3f7; -fx-background-radius: 5; -fx-border-radius: 5;" text="Save Changes">
+        <Button fx:id="FanMeetDetailsBackButton" layoutX="58.0" layoutY="371.0" mnemonicParsing="false" prefHeight="52.0" prefWidth="225.0" style="-fx-border-color: #1b4994; -fx-background-color: #f0f3f7; -fx-background-radius: 5; -fx-border-radius: 5;" text="Add Fanmeet">
             <font>
                 <Font name="Arial Bold" size="18.0" />
             </font>
