--- a/src/main/resources/fxmls/Idol/IdolFanMeetsView.fxml
+++ b/src/main/resources/fxmls/Idol/IdolFanMeetsView.fxml
@@ -28,7 +28,7 @@
                          <Font name="Arial" size="19.0" />
                      </font>
                  </Button>
-            <Button fx:id="finishedFanmeetsButton" layoutX="362.0" layoutY="23.0" mnemonicParsing="false" prefHeight="62.0" prefWidth="290.0" style="-fx-background-color: #bfeaf5; -fx-background-radius: 5; -fx-border-radius: \\;" text="Finished Fan Meets">
+            <Button fx:id="finishedFanmeetsButton" layoutX="362.0" layoutY="23.0" mnemonicParsing="false" prefHeight="62.0" prefWidth="290.0" style="-fx-background-color: #bfeaf5; -fx-background-radius: 5; -fx-border-radius: 5;" text="Finished Fan Meets">
                <font>
                   <Font name="Arial" size="18.0" />
                </font>
@@ -38,12 +38,12 @@
                   <Font name="Arial" size="18.0" />
                </font>
             </Button>
-            <ScrollPane fx:id="scrollPane" layoutX="39.0" layoutY="104.0" prefHeight="564.0" prefWidth="938.0" vbarPolicy="NEVER">
+            <ScrollPane fx:id="scrollPane" hbarPolicy="NEVER" layoutX="39.0" layoutY="134.0" prefHeight="534.0" prefWidth="938.0">
                <content>
-                  <FlowPane fx:id="flowPane" prefHeight="561.0" prefWidth="941.0" style="-fx-background-color: #e4e4e4;" />
+                  <FlowPane fx:id="flowPane" prefHeight="561.0" prefWidth="942.0" style="-fx-background-color: #e4e4e4;" />
                </content>
             </ScrollPane>
-            <Label fx:id="headingLabel" layoutX="70.0" layoutY="125.0" prefHeight="38.0" prefWidth="419.0">
+            <Label fx:id="headingLabel" layoutX="39.0" layoutY="96.0" prefHeight="38.0" prefWidth="419.0">
                <font>
                   <Font name="Arial Black" size="18.0" />
                </font>
