--- a/src/main/resources/fxmls/Idol/UpcomingFanMeetsViewCard.fxml
+++ b/src/main/resources/fxmls/Idol/UpcomingFanMeetsViewCard.fxml
@@ -38,7 +38,7 @@
                   <Font name="Arial" size="20.0" />
                </font>
             </Button>
-            <Button fx:id="deleteButton" mnemonicParsing="false" prefHeight="41.0" prefWidth="260.0" style="-fx-background-color: white; -fx-border-color: #1b4994; -fx-background-radius: 20; -fx-border-radius: 20;" text="Delete">
+            <Button fx:id="deleteButton" mnemonicParsing="false" prefHeight="41.0" prefWidth="260.0" style="-fx-background-color: white; -fx-border-color: #1b4994; -fx-background-radius: 20; -fx-border-radius: 20;" text="Cancel">
                <font>
                   <Font name="Arial" size="20.0" />
                </font>
