--- a/src/main/resources/fxmls/Idol/CreateNewFanMeetView.fxml
+++ b/src/main/resources/fxmls/Idol/CreateNewFanMeetView.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.shape.*?>
 <?import javafx.scene.text.*?>
 
-<VBox alignment="TOP_CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="510.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1">
+<VBox alignment="TOP_CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="510.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="idol.view.CreateFanMeetView">
     <children>
         <Pane>
             <children>
@@ -21,7 +21,7 @@
             <Insets bottom="20.0" />
          </VBox.margin>
         </Pane>
-        <HBox prefHeight="352.0" prefWidth="800.0">
+        <HBox prefHeight="343.0" prefWidth="800.0">
             <children>
                 <VBox prefHeight="330.0" prefWidth="400.0">
                     <children>
@@ -33,8 +33,7 @@
                                 <Insets top="10.0" />
                             </VBox.margin>
                         </Label>
-                  <DatePicker prefHeight="58.0" prefWidth="298.0" style="-fx-background-color: #f0f3f7; -fx-border-color: #1b4994;" />
-                  <TextField text="DITO YUNG ENTRY NG CREATE FANMEET" />
+                  <DatePicker fx:id="chosenDate" prefHeight="58.0" prefWidth="298.0" style="-fx-background-color: #f0f3f7; -fx-border-color: #1b4994;" />
                     </children>
                <padding>
                   <Insets left="40.0" right="20.0" />
@@ -54,7 +53,7 @@
                                     <Insets top="5.0" />
                                  </VBox.margin>
                               </Label>
-                              <TextField maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="42.0" prefWidth="290.0" promptText="eg. 13:00">
+                              <TextField fx:id="startTimeTF" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="42.0" prefWidth="290.0" promptText="eg. 13:00">
                                  <font>
                                     <Font size="15.0" />
                                  </font>
@@ -66,7 +65,7 @@
                                     <Font name="System Bold" size="18.0" />
                                  </font>
                               </Label>
-                              <TextField maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="40.0" prefWidth="289.0" promptText="eg. 23:00">
+                              <TextField fx:id="endTimeTF" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="40.0" prefWidth="289.0" promptText="eg. 23:00">
                                  <font>
                                     <Font size="15.0" />
                                  </font>
@@ -78,7 +77,7 @@
                                     <Font name="System Bold" size="18.0" />
                                  </font>
                               </Label>
-                              <TextField layoutX="30.0" layoutY="114.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="40.0" prefWidth="290.0" promptText="eg. 100">
+                              <TextField fx:id="pricePerMinuteTF" layoutX="30.0" layoutY="114.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="40.0" prefWidth="290.0" promptText="eg. 100">
                                  <VBox.margin>
                                     <Insets bottom="15.0" left="5.0" />
                                  </VBox.margin></TextField>
@@ -95,9 +94,14 @@
                </padding>
                 </VBox>
             </children></HBox>
+      <Label fx:id="noticeLB" alignment="CENTER" prefHeight="24.0" prefWidth="464.0" textFill="RED">
+         <font>
+            <Font name="Arial" size="14.0" />
+         </font>
+      </Label>
 
 
-        <Button fx:id="FanMeetDetailsBackButton" layoutX="58.0" layoutY="371.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="225.0" style="-fx-border-color: #1b4994; -fx-background-color: #f0f3f7; -fx-background-radius: 5; -fx-border-radius: 5;" text="Add Fanmeet">
+        <Button fx:id="addFanMeetBT" layoutX="58.0" layoutY="371.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="225.0" style="-fx-border-color: #1b4994; -fx-background-color: #f0f3f7; -fx-background-radius: 5; -fx-border-radius: 5;" text="Add Fanmeet">
             <font>
                 <Font name="Arial Bold" size="18.0" />
             </font>
